Hack to add BETA icon to CellxGene heading in step results table

--- a/Site/webapp/wdkCustomization/css/client.scss
+++ b/Site/webapp/wdkCustomization/css/client.scss
@@ -5,6 +5,17 @@
   z-index: 1;
 }
 
+.ResultTableSummaryView .HeadingCell--key-link > div > *:nth-child(2){
+  position: relative;
+  margin-left: 40px;
+  &:before {
+    position: absolute;
+    left: -37px;
+    pointer-events: none;
+    content: url('~@veupathdb/wdk-client/lib/Core/Style/images/beta2-30.png');
+  }
+}
+
 /* Hide default record ID printed by WDK for genes */
 .wdk-RecordContainer__GeneRecordClasses\.GeneRecordClass .wdk-RecordHeading {
   display: none;
