refs #47900 datasets history table notes column

--- a/Site/webapp/wdkCustomization/css/client.scss
+++ b/Site/webapp/wdkCustomization/css/client.scss
@@ -428,6 +428,7 @@
 /** record table cell overrides */
 
 /** content in these cells should not wrap */
+.wdk-DataTableCell__note,
 .wdk-DataTableCell__transcript_id,
 .wdk-DataTableCell__transcript_ids,
 .wdk-DataTableCell__Pvalue,
